# OSPP-2021

./: README.md  assisted_teleop.action
Assisted_Teleop_Behaviour_Tree/: Assisted_Teleop.xml
Assisted_Teleop_Recovery/: assisted_teleop.action  assisted_teleop.cpp
assisted_teleop/: CMakeLists.txt  package.xml
assisted_teleop/launch/: navigation2.launch.py
assisted_teleop/log/: latest_list
assisted_teleop/src/: assisted_teleop.cpp  footprint_sub.cpp  tf2_listener.cpp  turtlebot3_tf2_broadcaster.cpp
ospp-ws/assisted_teleop/: CMakeLists.txt
ospp-ws/assisted_teleop/include/assisted_teleop/: assisted_teleop.hpp
ospp-ws/assisted_teleop/src/: assisted_teleop.cpp  main.cpp
ospp-ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ospp-ws/install/assisted_teleop/include/assisted_teleop/: assisted_teleop.hpp
ospp-ws/install/assisted_teleop/lib/assisted_teleop/: assisted_teleop_node
ospp-ws/install/assisted_teleop/share/ament_index/resource_index/package_run_dependencies/: assisted_teleop
ospp-ws/install/assisted_teleop/share/ament_index/resource_index/parent_prefix_path/: assisted_teleop
ospp-ws/install/assisted_teleop/share/assisted_teleop/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ospp-ws/install/assisted_teleop/share/assisted_teleop/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  assisted_teleopConfig-version.cmake  assisted_teleopConfig.cmake
ospp-ws/install/assisted_teleop/share/assisted_teleop/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv
ospp-ws/log/: latest_build
ospp-ws/nav2_assisted_teleop/: CMakeLists.txt  package.xml
ospp-ws/nav2_assisted_teleop/include/nav2_assisted_teleop/: assisted_teleop.hpp
ospp-ws/nav2_assisted_teleop/src/: assisted_teleop.cpp  main.cpp
src/turtlebot3_navigation2/launch/: navigation2.launch.py
src/turtlebot3_navigation2/log/: latest_list
src/turtlebot3_navigation2/param/: burger_trial.yaml
src/turtlebot3_teleop/: package.xml  setup.py
src/turtlebot3_teleop/turtlebot3_teleop/script/: footprint_sub.py
