<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>assisted_teleop</name>
  <version>0.0.0</version>
  <description>Footprint projector node for assisted Teleop</description>
  <maintainer email="sabnisanushree@gmail.com">anushreesabnis</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>nav2_common</depend>

  
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>nav2_util</exec_depend>
  <exec_depend>lifecycle_msgs</exec_depend>
  <exec_depend>rclcpp_action</exec_depend>
  <exec_depend>test_msgs</exec_depend>
  <exec_depend>rclcpp_lifecycle</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
